# open-kiro-agent-sdk-python

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/guide/: api-reference.md  architecture.md  error-handling.md  examples.md  getting-started.md  index.md  troubleshooting.md
docs/plans/: 2026-01-29-kiro-agent-sdk-implementation.md  2026-01-29-kiro-agent-sdk-python-design.md  2026-01-29-user-guide-design.md
examples/: quick_start.py
src/kiro_agent_sdk/: __init__.py  _cli_version.py  _errors.py  client.py  query.py  types.py
src/kiro_agent_sdk/_internal/: __init__.py  message_parser.py
src/kiro_agent_sdk/_internal/transport/: __init__.py  subprocess_cli.py
tests/: conftest.py  test_client.py  test_errors.py  test_message_parser.py  test_query.py  test_transport.py  test_types.py
